tests/src/main/java/kendal/test/negative/attribute/Attribute_InvalidAttrTest.out
Attribute_InvalidAttrTest.java:25:14: compiler.err.cant.resolve.location.args: kindname.method, notExistingAttribute, , , (compiler.misc.location: kindname.annotation, kendal.test.negative.attribute.Attribute_InvalidAttrTest.UsingAttr, null)
1 error